--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,10 @@ body {
   right: 0; /* width: 100%*/
   background-color: blueviolet;
   color: white;
+  padding: 25px;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 12px;
 }
 
 .modal:empty {
