--- a/src/style.css
+++ b/src/style.css
@@ -81,7 +81,12 @@ body {
   left: 160px;
 }
 
-.modal {
+.modal:empty {
+  /* if no content */
+  display: none;
+}
+
+.modal-inner {
   position: absolute;
   top: 0;
   left: 0;
@@ -92,11 +97,6 @@ body {
   font-size: 20px;
   font-weight: bold;
   border-radius: 12px;
-}
-
-.modal:empty {
-  /* if no content */
-  display: none;
 }
 
 .modal-inner:empty {
